--- a/netlify.toml
+++ b/netlify.toml
@@ -41,3 +41,7 @@
   for = "/assets/*"
   [headers.values]
     Cache-Control = "public, max-age=31536000, immutable"
+
+[build]
+  command = "npm run build"
+  publish = "dist"
