--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   "dependencies": {
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.1",
-    "@mui/icons-material": "^7.3.7",
+    "@js-temporal/polyfill": "^0.5.1",
+    "@mui/icons-material": "^7.3.8",
     "@mui/material": "^7.3.7",
     "hls.js": "^1.6.15",
     "leaflet": "^1.9.4",
